@@ -429,6 +429,8 @@ Core and Builtins
 Library
 -------
 
+- Issue #7328: pydoc no longer corrupts sys.path when run with the '-m' switch
+
 - Issue #2054: ftplib now provides an FTP_TLS class to do secure FTP using
   TLS or SSL.  Patch by Giampaolo Rodola'.
 
